[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Dash.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Player/dust.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.7
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 1.5
scale_random = 1.0
color_ramp = SubResource( 3 )
anim_speed_curve = SubResource( 6 )

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 12.0
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 3 )
anim_speed_curve = SubResource( 6 )

[node name="Dash" type="Node2D"]
script = ExtResource( 1 )

[node name="dash_duration" type="Timer" parent="."]
one_shot = true

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="dust_trail" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
lifetime = 1.5
explosiveness = 0.8
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="dust_burst" type="Particles2D" parent="."]
material = SubResource( 7 )
emitting = false
amount = 14
lifetime = 1.5
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[connection signal="timeout" from="dash_duration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="ghost_timer" to="." method="_on_ghost_timer_timeout"]
